{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 88,
  "lineage": "92fc3fd2-07a4-8a4c-460e-2c8782722224",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "petclinic-isi-prod-alb-logs-be7cef0b",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:loadbalancer/app/petclinic-isi-prod-alb/f50b95f31b5d8cb3",
            "arn_suffix": "app/petclinic-isi-prod-alb/f50b95f31b5d8cb3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "petclinic-isi-prod-alb-1248242706.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:049618906674:loadbalancer/app/petclinic-isi-prod-alb/f50b95f31b5d8cb3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "petclinic-isi-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-025b6bbacc761953b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d58839c06f5244b"
              },
              {
                "subnet_id": "subnet-091ed6feb36c1b386"
              },
              {
                "subnet_id": "subnet-0a37adaec8f996348"
              }
            ],
            "subnets": [
              "subnet-03d58839c06f5244b",
              "subnet-091ed6feb36c1b386",
              "subnet-0a37adaec8f996348"
            ],
            "tags": {
              "Name": "petclinic-isi-prod-alb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-alb",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-041d7f3991fd01528",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.random_id.suffix",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:listener/app/petclinic-isi-prod-alb/f50b95f31b5d8cb3/37f8fd956fa1f926",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:049618906674:listener/app/petclinic-isi-prod-alb/f50b95f31b5d8cb3/37f8fd956fa1f926",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:loadbalancer/app/petclinic-isi-prod-alb/f50b95f31b5d8cb3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "petclinic"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.random_id.suffix",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:listener/app/petclinic-isi-prod-alb/f50b95f31b5d8cb3/ebfa096ca406ec67",
            "certificate_arn": "arn:aws:iam::049618906674:server-certificate/petclinic-isi-prod-automated-cert",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:targetgroup/petclinic-isi-prod-tg/cceadb52b3d9524e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:049618906674:listener/app/petclinic-isi-prod-alb/f50b95f31b5d8cb3/ebfa096ca406ec67",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:loadbalancer/app/petclinic-isi-prod-alb/f50b95f31b5d8cb3",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "petclinic"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.app",
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.random_id.suffix",
            "module.iam.aws_iam_server_certificate.petclinic_automated_cert",
            "module.iam.tls_private_key.petclinic_key",
            "module.iam.tls_self_signed_cert.petclinic_self_signed",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:targetgroup/petclinic-isi-prod-tg/cceadb52b3d9524e",
            "arn_suffix": "targetgroup/petclinic-isi-prod-tg/cceadb52b3d9524e",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:049618906674:targetgroup/petclinic-isi-prod-tg/cceadb52b3d9524e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "petclinic-isi-prod-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "petclinic-isi-prod-tg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-tg",
              "Project": "petclinic"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:security-group/sg-025b6bbacc761953b",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound to ECS tasks",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-025b6bbacc761953b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet - redirect to HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "petclinic-isi-prod-sg-alb",
            "name_prefix": "",
            "owner_id": "049618906674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-isi-prod-sg-alb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-sg-alb",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:security-group/sg-011448897358a9c7e",
            "description": "Security Group for ECS Fargate tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Internet via NAT Gateway",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011448897358a9c7e",
            "ingress": [],
            "name": "petclinic-isi-prod-sg-app",
            "name_prefix": "",
            "owner_id": "049618906674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-isi-prod-sg-app"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-sg-app",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:security-group/sg-0a981c3eb85148f38",
            "description": "Security Group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "No outbound traffic required",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a981c3eb85148f38",
            "ingress": [],
            "name": "petclinic-isi-prod-sg-rds",
            "name_prefix": "",
            "owner_id": "049618906674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-isi-prod-sg-rds"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-sg-rds",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Traffic from ALB SG only",
            "from_port": 8080,
            "id": "sgrule-1001830170",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-011448897358a9c7e",
            "security_group_rule_id": "sgr-0659f7e848a99f572",
            "self": false,
            "source_security_group_id": "sg-025b6bbacc761953b",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.app",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from APP SG only",
            "from_port": 5432,
            "id": "sgrule-4225169963",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a981c3eb85148f38",
            "security_group_rule_id": "sgr-0f19b2534ef175943",
            "self": false,
            "source_security_group_id": "sg-011448897358a9c7e",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.app",
            "module.security_groups.aws_security_group.rds",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1bf977baee37fdb",
            "arn": "arn:aws:ec2:us-east-1:049618906674:elastic-ip/eipalloc-0e1bf977baee37fdb",
            "domain": "vpc",
            "id": "eipalloc-0e1bf977baee37fdb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-60-124-177.compute-1.amazonaws.com",
            "public_ip": "100.60.124.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "petclinic-isi-prod-nat-eip-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-eip-us-east-1a",
              "Project": "petclinic"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0381461843b456948",
            "arn": "arn:aws:ec2:us-east-1:049618906674:elastic-ip/eipalloc-0381461843b456948",
            "domain": "vpc",
            "id": "eipalloc-0381461843b456948",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-193-57-31.compute-1.amazonaws.com",
            "public_ip": "44.193.57.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "petclinic-isi-prod-nat-eip-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-eip-us-east-1b",
              "Project": "petclinic"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e220c89fbaf80ae",
            "arn": "arn:aws:ec2:us-east-1:049618906674:elastic-ip/eipalloc-07e220c89fbaf80ae",
            "domain": "vpc",
            "id": "eipalloc-07e220c89fbaf80ae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-165-7-200.compute-1.amazonaws.com",
            "public_ip": "54.165.7.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "petclinic-isi-prod-nat-eip-us-east-1c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-eip-us-east-1c",
              "Project": "petclinic"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:internet-gateway/igw-0c2b67711bf12492f",
            "id": "igw-0c2b67711bf12492f",
            "owner_id": "049618906674",
            "tags": {
              "Name": "petclinic-isi-prod-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-igw",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1bf977baee37fdb",
            "association_id": "eipassoc-00ef4d11bdb4a5701",
            "connectivity_type": "public",
            "id": "nat-08d311f3f424a20b6",
            "network_interface_id": "eni-0b754e023d6bbd6e1",
            "private_ip": "10.0.1.211",
            "public_ip": "100.60.124.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-091ed6feb36c1b386",
            "tags": {
              "Name": "petclinic-isi-prod-nat-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-us-east-1a",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0381461843b456948",
            "association_id": "eipassoc-0038f3c0cb7163ee5",
            "connectivity_type": "public",
            "id": "nat-09354bdc42f5994ad",
            "network_interface_id": "eni-047a5073e773479a2",
            "private_ip": "10.0.2.155",
            "public_ip": "44.193.57.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a37adaec8f996348",
            "tags": {
              "Name": "petclinic-isi-prod-nat-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-us-east-1b",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e220c89fbaf80ae",
            "association_id": "eipassoc-0990725849916f82b",
            "connectivity_type": "public",
            "id": "nat-0b174590c2b4ea71f",
            "network_interface_id": "eni-0c2bbd8da9ba3ee1b",
            "private_ip": "10.0.3.36",
            "public_ip": "54.165.7.200",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d58839c06f5244b",
            "tags": {
              "Name": "petclinic-isi-prod-nat-us-east-1c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-us-east-1c",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:route-table/rtb-05294279c2cf97b58",
            "id": "rtb-05294279c2cf97b58",
            "owner_id": "049618906674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d311f3f424a20b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-isi-prod-rt-private-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-rt-private-us-east-1a",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:route-table/rtb-0d007684ac5d371c4",
            "id": "rtb-0d007684ac5d371c4",
            "owner_id": "049618906674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09354bdc42f5994ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-isi-prod-rt-private-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-rt-private-us-east-1b",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:route-table/rtb-0b219164839b2f41f",
            "id": "rtb-0b219164839b2f41f",
            "owner_id": "049618906674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b174590c2b4ea71f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-isi-prod-rt-private-us-east-1c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-rt-private-us-east-1c",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:route-table/rtb-04c98426a4a4cd7c7",
            "id": "rtb-04c98426a4a4cd7c7",
            "owner_id": "049618906674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2b67711bf12492f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-isi-prod-rt-public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-rt-public",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b04cb1d14f5893c",
            "route_table_id": "rtb-05294279c2cf97b58",
            "subnet_id": "subnet-0499c5d1e0f937ca2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4d4ad35bf2e4f2a",
            "route_table_id": "rtb-0d007684ac5d371c4",
            "subnet_id": "subnet-033dbd1913a66573c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da5fd7fd83e3f8c6",
            "route_table_id": "rtb-0b219164839b2f41f",
            "subnet_id": "subnet-08b94ddd8894b3e92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d2744c20ccbd48e",
            "route_table_id": "rtb-05294279c2cf97b58",
            "subnet_id": "subnet-0f2567377a5269cbe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0130fa7d9f76ea482",
            "route_table_id": "rtb-0d007684ac5d371c4",
            "subnet_id": "subnet-0497d2ac543fe9708"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc61d80b3559b7fa",
            "route_table_id": "rtb-0b219164839b2f41f",
            "subnet_id": "subnet-074c8cfb5be71d604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041bf7b08b9252d84",
            "route_table_id": "rtb-04c98426a4a4cd7c7",
            "subnet_id": "subnet-091ed6feb36c1b386"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012b170624f263d92",
            "route_table_id": "rtb-04c98426a4a4cd7c7",
            "subnet_id": "subnet-0a37adaec8f996348"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06545779fbdaa11f0",
            "route_table_id": "rtb-04c98426a4a4cd7c7",
            "subnet_id": "subnet-03d58839c06f5244b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-0499c5d1e0f937ca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0499c5d1e0f937ca2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-db-us-east-1a",
              "Type": "Private-DB"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-db-us-east-1a",
              "Project": "petclinic",
              "Type": "Private-DB"
            },
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-033dbd1913a66573c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033dbd1913a66573c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-db-us-east-1b",
              "Type": "Private-DB"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-db-us-east-1b",
              "Project": "petclinic",
              "Type": "Private-DB"
            },
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-08b94ddd8894b3e92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b94ddd8894b3e92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-db-us-east-1c",
              "Type": "Private-DB"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-db-us-east-1c",
              "Project": "petclinic",
              "Type": "Private-DB"
            },
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-0f2567377a5269cbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2567377a5269cbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-private-us-east-1a",
              "Type": "Private-App"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-private-us-east-1a",
              "Project": "petclinic",
              "Type": "Private-App"
            },
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-0497d2ac543fe9708",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0497d2ac543fe9708",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-private-us-east-1b",
              "Type": "Private-App"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-private-us-east-1b",
              "Project": "petclinic",
              "Type": "Private-App"
            },
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-074c8cfb5be71d604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074c8cfb5be71d604",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-private-us-east-1c",
              "Type": "Private-App"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-private-us-east-1c",
              "Project": "petclinic",
              "Type": "Private-App"
            },
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-091ed6feb36c1b386",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091ed6feb36c1b386",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-public-us-east-1a",
              "Type": "Public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-public-us-east-1a",
              "Project": "petclinic",
              "Type": "Public"
            },
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-0a37adaec8f996348",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a37adaec8f996348",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-public-us-east-1b",
              "Type": "Public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-public-us-east-1b",
              "Project": "petclinic",
              "Type": "Public"
            },
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-03d58839c06f5244b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d58839c06f5244b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-public-us-east-1c",
              "Type": "Public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-public-us-east-1c",
              "Project": "petclinic",
              "Type": "Public"
            },
            "vpc_id": "vpc-041d7f3991fd01528"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:vpc/vpc-041d7f3991fd01528",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013ca130734e35321",
            "default_route_table_id": "rtb-0478055d3cdb7a327",
            "default_security_group_id": "sg-0e53ebab0400db3b1",
            "dhcp_options_id": "dopt-0e84afa008fa529ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041d7f3991fd01528",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0478055d3cdb7a327",
            "owner_id": "049618906674",
            "tags": {
              "Name": "petclinic-isi-prod-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-vpc",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}